styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --font-header: 'Roboto Condensed';
  --font-header: 'Averia Serif Libre';
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  @apply text-stone-700 dark:text-stone-400;
}

h1,
h2,
h3,
h4,
h5,
h6,
h7 {
  @apply text-black dark:text-white;
}

/* Document level adjustments */
html {
  font-size: 18px;
  box-sizing: border-box;
}

.site-nav {
  position: relative;
}
.site-nav .nav-trigger {
  display: none;
}
.site-nav .menu-icon {
  display: none;
}
.site-nav .page-link:not(:last-child) {
  margin-right: 20px;
}
.site-nav .page-link {
  display: block;
  margin-top: 1rem;
  margin-left: -4rem;
}
.header-content > article {
  margin-left: 19rem;
}
.basic-outer {
  margin-left: 19rem;
  margin-top: 1.4rem;
}
@media screen and (max-width: 650px) {
  .site-nav .page-link {
    display: inline;
    margin-top: 0rem;
    margin-left: 0rem;
  }
  .basic-outer,
  .header-content > article {
    margin-left: 0;
  }
  .site-nav {
    @apply bg-stone-100 dark:bg-stone-800 border-stone-300 dark:border-stone-700;
    position: absolute;
    top: 3.5rem;
    right: 1rem;
    border: 1px solid;
  }
  .site-nav label[for='nav-trigger'] {
    display: block;
    position: absolute;
    top: -2.7rem;
    right: 0.6rem;
    width: 2rem;
    height: 2rem;
    z-index: 2;
    cursor: pointer;
  }
  .site-nav .menu-icon {
    display: block;
    height: 2.6rem;
    width: 2.6rem;
    border: 1px solid;
    padding-left: 0.5rem;
    padding-top: 0.5rem;
    text-align: center;
    @apply border-stone-300 dark:border-stone-700 rounded-lg;
  }
  .site-nav .menu-icon > svg {
    @apply fill-stone-600 dark:fill-stone-400;
  }
  .site-nav input ~ .trigger {
    clear: both;
    display: none;
  }
  .site-nav input:checked ~ .trigger {
    display: block;
    float: right;
    padding-bottom: 0.5rem;
  }
  .site-nav .page-link {
    display: block;
    padding: 2rem;
  }
  .site-nav .page-link:not(:last-child) {
    margin-right: 0;
  }
}

body {
  @apply bg-stone-100 dark:bg-stone-900;
}

.link,
a {
  @apply text-blue-700 dark:text-blue-400 hover:text-blue-800 dark:hover:text-blue-200 visited:text-blue-700 dark:visited:text-blue-400 transition-colors duration-200;
}
.SiteHeader a h1 {
  @apply text-stone-800 dark:text-stone-200 visited:text-stone-800 dark:visited:text-stone-200;
}
.SiteHeader a {
  @apply text-stone-600 dark:text-stone-400 hover:text-black dark:hover:text-white visited:text-stone-600 dark:visited:text-stone-400;
}
h1 {
  font-family: var(--font-header);
  font-size: 2.25rem;
}
h2 {
  font-family: var(--font-header);
  font-size: 1.75rem;
}
h3 {
  font-family: var(--font-header);
  font-size: 1.5rem;
  margin-top: 1rem;
}
h4 {
  font-family: var(--font-header);
  font-size: 1.25rem;
}
p {
  margin-bottom: 2rem;
}
li p {
  margin-bottom: 1rem;
}
article ul {
  list-style-type: disc;
}
article ol {
  list-style-type: decimal;
}
article ol,
article ul {
  padding-left: 1rem;
  margin-bottom: 2rem;
}
article ol li,
article ul li {
  padding-left: 0.5rem;
}
article pre {
  margin-bottom: 2rem;
  padding: 1rem;
  overflow-x: auto;
  @apply bg-stone-300 dark:bg-stone-800;
}
article code {
  padding: 0.25rem;
  border-radius: 0.5rem;
  border-width: 1px;
  @apply bg-stone-200 dark:bg-stone-800 border-stone-300 dark:border-stone-700;
}
article .half-height img {
  max-height: 30rem;
}

article blockquote {
  border-left: 2px solid #ddd;
  padding: 2rem 2rem 0.1rem 2rem;
  margin-bottom: 2rem;
  font-style: italic;
  @apply bg-stone-300 dark:bg-stone-800;
}
button {
  @apply cursor-pointer;
}

.db {
  border: 1px solid red;
}

.resume h2 {
  margin-bottom: 1rem;
  border-bottom: 2px solid;
  @apply border-stone-300 dark:border-stone-700;
}
.resume .job-date {
  float: right;
  line-height: 2.5rem;
}
.resume .job-company {
  line-height: 2.5rem;
}
.resume ul {
  list-style-type: disc;
  padding-left: 1rem;
  margin-bottom: 2rem;
}
.resume li p {
  margin-bottom: 0rem;
}
.SiteHeader {
  @apply flex items-center mb-4 pl-8 pr-8 pb-4 pt-4 border-b-2 border-stone-200 dark:border-stone-800 bg-stone-100 dark:bg-stone-800 noprint;
}
@media only screen and (min-width: 650px) {
  .basic-outer {
    margin-top: 2.3rem;
  }
  .site-container footer {
    @apply dark:bg-stone-900;
  }
  .site-container {
    display: grid;
  }
  .header-content {
    display: flex;
  }
  .SiteHeader {
    @apply flex flex-col items-center mb-4 pl-8 pr-8 pb-4 pt-4 border-stone-200 dark:border-stone-800 bg-stone-100 dark:bg-stone-900 noprint;
    border-bottom: none;
    border-right-width: 2px;
    position: fixed;
    height: calc(100dvh - 5rem);
    margin-top: 2rem;
  }
}

@media print {
  body {
    font-size: 11px;
  }

  .avoidbreak {
    break-inside: avoid;
  }

  .noprint {
    display: none;
  }
}

